# ServoCore

./: .gitignore  CLAUDE.md  README.md
code/: CMakeLists.txt  README.md  hw_info.cmake
code/cmake/: TestBuildCMakeLists.cmake  firmware_toolchain_setup.cmake  gtest_import.cmake  pico_sdk_import.cmake  qt_import.cmake
code/common/: CMakeLists.txt
code/common/drivers/: CMakeLists.txt
code/common/drivers/general/: CMakeLists.txt
code/common/drivers/interfaces/: CMakeLists.txt
code/common/libs/: CMakeLists.txt
code/common/libs/assert/: CMakeLists.txt
code/common/libs/assert/inc/assert/: assert.h
code/common/libs/assert/src/: on_assert_fail.cpp
code/common/libs/debug_print/: CMakeLists.txt
code/common/libs/debug_print/src/: print_type_overloads.cpp
code/common/libs/debug_print/test/: unit_test.cpp
code/common/libs/math/: CMakeLists.txt
code/common/libs/math/inc/math/: crc.h
code/common/libs/math/src/: crc.cpp
code/common/libs/parameter_system/: CMakeLists.txt
code/common/libs/parameter_system/inc/parameter_system/: ParameterDatabase.h  ParameterDeclaration.h  ParameterDefinition.h  ParameterDelegate.h  abstract_parameter_definitions.h  common.h  common_defines.h  definition_helpers.h  definitions.h  parameter_definitions.h  parameter_type_mappings.h
code/common/libs/parameter_system/src/: ParameterDatabase.cpp  ParameterDefinition.cpp
code/common/libs/serial_communication_framework/: CMakeLists.txt
code/common/libs/serial_communication_framework/inc/serial_communication_framework/: MasterHandler.h  SlaveHandler.h  command_interface.h  common.h  packets.h  serialize_deserialize.h
code/common/libs/serial_communication_framework/src/: MasterHandler.cpp  SlaveHandler.cpp  command_interface.cpp  serialize_deserialize.cpp
code/common/libs/utils/: CMakeLists.txt
code/common/protocol/: CMakeLists.txt
code/common/protocol/inc/protocol/: README.md  commands.h  operation_codes.h  parameter_ids.h  parameters.h  req_types.h  requests.h  resp_types.h
code/common/protocol/src/: requests.cpp
code/common/protocol/src/commands/: get_param_metadata_command.cpp  get_registered_param_ids_command.cpp  read_param_value_command.cpp  write_param_value_command.cpp
code/control_api/: CMakeLists.txt  README.md
code/control_api/template/: CMakeLists.txt
code/control_api/template/inc/control_api/: Context.h  Device.h
code/control_api/template/src/: Context.cpp  Device.cpp
code/control_api/windows/: CMakeLists.txt
code/control_api/windows/src/: BufferedAsyncSerialPortDriver.cpp  Context.cpp  ProgramUptimeClock.cpp
code/dev_tool/: CMakeLists.txt
code/dev_tool/inc/: CommunicationDebuggerWindow.h  DeviceControlWidget.h  MainWindow.h  helpers.h
code/dev_tool/inc/parameter_table/: ParameterTableModel.h  ParameterTableWidget.h  ParameterValueDelegate.h  common.h
code/dev_tool/src/: CommunicationDebuggerWindow.cpp  DeviceControlWidget.cpp  MainWindow.cpp  helpers.cpp  main.cpp
code/dev_tool/src/parameter_table/: ParameterTableModel.cpp  ParameterTableWidget.cpp  ParameterValueDelegate.cpp
code/dev_tool/ui/: CommunicationDebuggerWindow.ui  DeviceControlWidget.ui  MainWindow.ui  ParameterTableWidget.ui
code/drivers/: CMakeLists.txt
code/drivers/inc/drivers/: BufferedAsyncUartDriver.h  PwmSliceDriver.h
code/drivers/inc/drivers/interfaces/: SerialBufferedCommunicationInterface.h
code/drivers/interfaces/: CMakeLists.txt
code/drivers/pico/: CMakeLists.txt
code/drivers/pico/inc/drivers/: AnalogRgbLedDriver.h
code/drivers/pico/src/: AnalogRgbLedDriver.cpp  PwmSliceDriver.cpp
code/drivers/src/: PwmSliceDriver.cpp
code/firmware/: CMakeLists.txt
code/firmware/drivers/: CMakeLists.txt
code/firmware/drivers/middleware/: CMakeLists.txt
code/firmware/drivers/middleware/src/: AS5600_MagneticEncoderI2cDriver.cpp
code/firmware/drivers/pico/: CMakeLists.txt
code/firmware/drivers/pico/src/: AnalogRgbLedDriver.cpp  I2CMasterDriver.cpp  SysClockDriver.cpp  TimerDriver.cpp
code/firmware/fw_libs/: CMakeLists.txt
code/firmware/fw_libs/led_controller/: CMakeLists.txt
code/firmware/fw_libs/parameter_system/src/: ParameterDatabase.cpp
code/firmware/inc/: hw_mappings.h  interrupt_service_routines.h  protocol_handlers.h  serial_communication_framework_op_code_handlers.h
code/firmware/src/: interrupt_service_routines.cpp  main.cpp  protocol_handlers.cpp  serial_communication_framework_op_code_handlers.cpp
code/inc/: comm_protocol_op_code_handlers.h  hw_mappings.h
code/libs/: CMakeLists.txt
code/libs/assert/: CMakeLists.txt
code/libs/assert/inc/assert/: assert.h
code/libs/assert/src/: assert.cpp  on_assert_fail.cpp
code/libs/comm_protocol/: CMakeLists.txt
code/libs/comm_protocol/inc/comm_protocol/: ProtocolHandler.h  SlaveProtocolHandler.h  packets.h  protocol_definition.h  serialize_deserialize.h
code/libs/comm_protocol/src/: ProtocolHandler.cpp  SlaveProtocolHandler.cpp  serialize_deserialize.cpp
code/libs/debug_print/: CMakeLists.txt
code/libs/debug_print/inc/debug_print/: debug_print.h
code/libs/debug_print/src/: debug_print.cpp  formatting_options.cpp  print_type_overloads.cpp
code/libs/debug_print/test/: unit_test.cpp
code/libs/led_controller/: CMakeLists.txt
code/libs/led_controller/inc/led_controller/: LedController.h
code/libs/led_controller/src/: LedController.cpp
code/libs/parameter_system/: CMakeLists.txt
code/libs/parameter_system/inc/parameter_system/: ParameterDatabase.h  ParameterDelegate.h  parameter_type_mappings.h
code/libs/parameter_system/src/: ParameterDatabase.cpp
code/libs/serial_communication_framework/: CMakeLists.txt
code/libs/serial_communication_framework/inc/serial_communication_framework/: SlaveHandler.h  common.h  serialize_deserialize.h
code/libs/serial_communication_framework/src/: MasterHandler.cpp  SlaveHandler.cpp  serialize_deserialize.cpp
code/libs/utils/: CMakeLists.txt
code/src/: comm_protocol_op_code_handlers.cpp  main.cpp  serial_communication_framework_op_code_handlers.cpp
code/tools/: arm_memory_usage.py  test_comunication.py
(+30 files in other folders)
